Changes
=======

1.0.4 (2018-09-17)
------------------

Bug fixes:

- Raise ValueError if get_writer_for_driver() is called without a driver
  name.
- Windows are now frozen so that they are hashable (#1452).

Refactoring:

- Use of InMemoryRaster eliminates redundant code in the _warp module (#1427,
  #816).
- Generalize sessions to support cloud providers other than AWS (#1429).

1.0.3.post1 (2018-09-07)
------------------------

This version corrects errors made in building binary wheels for 1.0.3. There
are no bug fixes or new features in this version.

1.0.3 (2018-08-01)
------------------

Bug fixes:

- The input file handler of rio-rasterize has been changed so that it does not
  reject GeoJSON files (#1425).
- Linear rings have been added as acceptable input for rio-rasterize and other
  commands and functions (#1431).

1.0.2 (2018-07-27)
------------------

Bug fixes:

- The output of calculate_default_transform() can be fixed to output dimensions
  as well as to output resolution (#1409).
- In using rio-warp, the --src-bounds option can now override the bounds of the
  source dataset when --dimensions is used (#1419).
- Bounds of rotated rasters are now calculated correctly (#1422).
- A band indexing bug in reproject() (#1350) has been fixed (#1424).

1.0.1 (2018-07-23)
------------------

Bug fixes:

- Bounding envelopes are densified at higher precision in transform_bounds to
  fix #1411.
- Add LERC compression to enums.Compression (#1412).
- The reproject() function now passes dst_alpha properly to _reproject(), which
  unlocks materialization of warp destination alpha band masks (#1417).
- The --dimensions and --src-bounds options of rio-warp can be used together
  as expected (#1418).

1.0.0 (2018-07-12)
------------------

There have been no changes since release candidate 5.

1.0rc5 (2018-07-09)
-------------------

- C source files are now generated using Cython 0.28.3, which gives us support
  for Python 3.7 (#1404, #1405).

1.0rc4 (2018-07-05)