@@ -6,6 +6,8 @@ Changes
 
 Bug fixes:
 
+- Add missing bilinear, cubic spline, lanczos resampling modes for overviews
+  (#1457).
 - Raise ValueError if get_writer_for_driver() is called without a driver
   name.
 - Windows are now frozen so that they are hashable (#1452).
